--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     .price {
       font-weight: bold;
       font-size: 1.1rem;
-      color: #f499c1;
+      color: white;
     }
     form {
       max-width: 480px;
@@ -126,7 +126,7 @@
       <label for="name">Product Name</label>
       <input type="text" id="name" required placeholder="Enter product name" />
 
-      <label for="price">Price ($)</label>
+      <label for="price">Price</label>
       <input type="number" id="price" required step="0.01" min="0" placeholder="Enter price" />
 
       <label for="imageFile">Upload Image</label>
@@ -173,7 +173,7 @@
           <img src="${product.image}" alt="${product.name}" />
           <h3>${product.name}</h3>
           <p>${product.description}</p>
-          <div class="price">$${parseFloat(product.price).toFixed(2)}</div>
+          <div class="price">${product.price}</div>
         `;
         container.appendChild(div);
       });
@@ -189,7 +189,7 @@
       e.preventDefault();
 
       const name = document.getElementById('name').value.trim();
-      const price = parseFloat(document.getElementById('price').value);
+      const price = document.getElementById('price').value.trim();
       const imageInput = document.getElementById('imageFile');
       const description = document.getElementById('description').value.trim();
 
