--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Noori Styles - Product Categories</title>
   <style>
+    :root {
+      --theme-color: #f499c1;
+      --theme-color-dark: #b35c85;
+      --theme-color-light: #fff0f6;
+      --theme-color-alt: #b3a2ce;
+    }
     body {
       margin: 0;
       padding: 0;
@@ -13,12 +19,41 @@
       color: #4b3a57;
     }
     header {
-      background: #f499c1;
+      background: var(--theme-color);
       color: white;
       text-align: center;
       padding: 2rem 1rem;
       font-size: 2rem;
       font-weight: bold;
+    }
+    #themeChanger {
+      max-width: 960px;
+      margin: 1rem auto;
+      padding: 0 1rem;
+      text-align: center;
+    }
+    #themeInput {
+      padding: 0.4rem 0.8rem;
+      font-size: 1rem;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      width: 120px;
+      text-transform: lowercase;
+      letter-spacing: 1px;
+    }
+    #applyThemeBtn {
+      background: var(--theme-color-alt);
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 10px;
+      font-weight: bold;
+      cursor: pointer;
+      margin-left: 0.5rem;
+      transition: background-color 0.3s ease;
+    }
+    #applyThemeBtn:hover {
+      background: var(--theme-color-dark);
     }
     main {
       max-width: 960px;
@@ -27,16 +62,16 @@
     }
     .section {
       margin-bottom: 3rem;
-      border: 2px solid #f499c1;
+      border: 2px solid var(--theme-color);
       border-radius: 12px;
-      background: #fff0f6;
+      background: var(--theme-color-light);
       padding: 1rem;
       position: relative;
     }
     .section-title {
       font-size: 1.5rem;
       font-weight: bold;
-      color: #b35c85;
+      color: var(--theme-color-dark);
       margin-bottom: 1rem;
       cursor: pointer;
     }
@@ -54,11 +89,16 @@
     }
     .products {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1.5rem;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 1.2rem;
+    }
+    @media (min-width: 768px) {
+      .products {
+        grid-template-columns: repeat(4, 1fr);
+      }
     }
     .product {
-      background: #b3a2ce;
+      background: var(--theme-color-alt);
       border-radius: 12px;
       padding: 1rem;
       box-shadow: 0 0 10px rgba(179, 162, 206, 0.4);
@@ -100,7 +140,7 @@
       font-size: 1rem;
     }
     form button {
-      background: #f499c1;
+      background: var(--theme-color);
       border: none;
       padding: 0.6rem 1.2rem;
       border-radius: 20px;
@@ -110,12 +150,12 @@
       width: 100%;
     }
     form button:hover {
-      background: #b35c85;
+      background: var(--theme-color-dark);
     }
     #addSectionBtn {
       display: block;
       margin: 2rem auto;
-      background: #b3a2ce;
+      background: var(--theme-color-alt);
       color: white;
       border: none;
       padding: 0.8rem 1.5rem;
@@ -134,6 +174,12 @@
 </head>
 <body>
   <header>The Noori Styles</header>
+
+  <div id="themeChanger">
+    <input id="themeInput" type="text" placeholder="#f499c1" maxlength="7" />
+    <button id="applyThemeBtn">Apply Theme Color</button>
+  </div>
+
   <main>
     <button id="addSectionBtn">+ Add New Section</button>
     <div id="sections"></div>
@@ -142,6 +188,12 @@
 
   <script>
     let categories = JSON.parse(localStorage.getItem('categories') || '[]');
+
+    // Load saved theme color or default
+    const root = document.documentElement;
+    const savedColor = localStorage.getItem('themeColor') || getComputedStyle(root).getPropertyValue('--theme-color').trim();
+    setThemeColors(savedColor);
+    document.getElementById('themeInput').value = savedColor;
 
     function saveCategories() {
       localStorage.setItem('categories', JSON.stringify(categories));
@@ -256,6 +308,51 @@
         container.appendChild(section);
       });
     }
+
+    // Theme color change logic
+    function setThemeColors(hexColor) {
+      if(!/^#([0-9A-F]{3}){1,2}$/i.test(hexColor)) {
+        alert("Invalid hex color code! Use format like #f499c1");
+        return false;
+      }
+      root.style.setProperty('--theme-color', hexColor);
+      // Darker variant for hover etc
+      root.style.setProperty('--theme-color-dark', shadeColor(hexColor, -20));
+      // Lighter variant for backgrounds
+      root.style.setProperty('--theme-color-light', shadeColor(hexColor, 80));
+      // Alternate purple-ish color (used for product bg) just shift hue a bit
+      root.style.setProperty('--theme-color-alt', shadeColor(hexColor, 20));
+      localStorage.setItem('themeColor', hexColor);
+      return true;
+    }
+
+    // Utility: shade a hex color by % amount (- darker, + lighter)
+    function shadeColor(color, percent) {
+      let R = parseInt(color.substring(1,3),16);
+      let G = parseInt(color.substring(3,5),16);
+      let B = parseInt(color.substring(5,7),16);
+
+      R = parseInt(R * (100 + percent) / 100);
+      G = parseInt(G * (100 + percent) / 100);
+      B = parseInt(B * (100 + percent) / 100);
+
+      R = (R<255)?R:255;
+      G = (G<255)?G:255;
+      B = (B<255)?B:255;
+
+      const RR = ((R.toString(16).length==1)?"0"+R.toString(16):R.toString(16));
+      const GG = ((G.toString(16).length==1)?"0"+G.toString(16):G.toString(16));
+      const BB = ((B.toString(16).length==1)?"0"+B.toString(16):B.toString(16));
+
+      return "#"+RR+GG+BB;
+    }
+
+    document.getElementById('applyThemeBtn').onclick = () => {
+      const val = document.getElementById('themeInput').value.trim();
+      if(setThemeColors(val)) {
+        alert("Theme color updated!");
+      }
+    };
 
     document.getElementById('addSectionBtn').onclick = () => {
       createSection();
